@@ -48,6 +48,11 @@
  - (bal) Migrated AIX getuserattr and usrinfo code to 
    openbsd-compat/port-aix.[c] to improve readilbity of do_child() and
    simplify our diffs against upstream source.
+ - (bal) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2002/02/15 23:11:26
+     [session.c]
+     split do_child(), ok mouring@
+
 
 20020218
  - (tim) newer config.guess from ftp://ftp.gnu.org/gnu/config/config.guess
@@ -7645,4 +7650,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1867 2002/02/19 20:27:55 mouring Exp $
+$Id: ChangeLog,v 1.1868 2002/02/19 21:50:43 mouring Exp $
